Introduce IdFactory for GTFS